Removed non-hashed function, Added SwaggerDoc and Controller Advice